; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/extr_shared_alloc_win32.c_zend_shared_alloc_lock_win32.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/extr_shared_alloc_win32.c_zend_shared_alloc_lock_win32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@memory_mutex = common dso_local global i32 0, align 4
@INFINITE = common dso_local global i32 0, align 4
@WAIT_FAILED = common dso_local global i64 0, align 8
@ACCEL_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Cannot lock mutex\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zend_shared_alloc_lock_win32() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @memory_mutex, align 4
  %3 = load i32, i32* @INFINITE, align 4
  %4 = call i64 @WaitForSingleObject(i32 %2, i32 %3)
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* @WAIT_FAILED, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %0
  %9 = load i32, i32* @ACCEL_LOG_ERROR, align 4
  %10 = call i32 @zend_accel_error(i32 %9, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %8, %0
  ret void
}

declare dso_local i64 @WaitForSingleObject(i32, i32) #1

declare dso_local i32 @zend_accel_error(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
